# infinite-craft-clone

./: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
assets/: NotoColorEmoji-Regular.ttf:Zone.Identifier
shaders/: fragment.frag  text.frag  text.vert
src/: Game.cpp  Math.cpp  Math.h  Shader.cpp  Shader.hpp  main.cpp
src/Actor/: Actor.cpp  Actor.hpp  TextActor.cpp  TextActor.hpp
src/Component/: GraphicsComponent.hpp  TextComponent.cpp  TextComponent.hpp
src/Component/Component/: Component.cpp  Component.hpp
src/Component/GraphicsComponent/: GraphicsComponent.hpp
src/Component/TextComponent/: TextComponent.cpp  TextComponent.hpp
src/Core/: InputManager.cpp  InputManager.hpp  Renderer.cpp  ResourceManager.cpp  ResourceManager.hpp  Window.hpp
src/Core/Renderer/: Renderer.cpp  Renderer.hpp
src/Core/ResourceManager/: ResourceManager.cpp  ResourceManager.hpp
src/Core/TextRenderer/: TextRenderer.cpp  TextRenderer.hpp
src/Core/Window/: Window.cpp
src/Font/: FreeTypeFont.cpp  FreeTypeFont.hpp  SimpleFont.cpp  SimpleFont.hpp
src/Game/: Game.cpp  Game.hpp
src/TextObject/: TextObject.cpp  TextObject.hpp
